WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129872
REGRESSION (
r164847
): Pressing the command key while hovering an element causes it to un-hover
https://bugs.webkit.org/show_bug.cgi?id=129872
Summary
REGRESSION (r164847): Pressing the command key while hovering an element caus...
Tim Horton
Reported
2014-03-07 02:48:07 PST
Created
attachment 226103
[details]
repro
https://bugs.webkit.org/show_bug.cgi?id=129455
Steps to Reproduce: 1. Load the attached test case. 2. Hover the box. It will turn green. 3. Press the command key. Expected: The box should remain green. Actual: The box goes back to being red, as if it were un-hovered. This breaks the user's ability to cmd-click on links in menus that appear on hover.
Attachments
repro
(134 bytes, text/html)
2014-03-07 02:48 PST
,
Tim Horton
no flags
Details
proposed fix
(2.92 KB, patch)
2014-03-07 12:01 PST
,
Alexey Proskuryakov
thorton
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-03-07 12:01:54 PST
Created
attachment 226145
[details]
proposed fix
WebKit Commit Bot
Comment 2
2014-03-07 15:40:21 PST
Comment on
attachment 226145
[details]
proposed fix Rejecting
attachment 226145
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 226145, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/WKViewPrivate.h Hunk #1 FAILED at 68. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebKit2/UIProcess/API/Cocoa/WKViewPrivate.h.rej patching file Source/WebKit2/UIProcess/API/mac/WKView.mm Hunk #1 FAILED at 2133. Hunk #2 FAILED at 3070. 2 out of 2 hunks FAILED -- saving rejects to file Source/WebKit2/UIProcess/API/mac/WKView.mm.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Tim Horton']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/5679527615266816
Alexey Proskuryakov
Comment 3
2014-03-07 18:48:53 PST
Commit queue landed this patch, and failed when trying to land it again (probably because bug mail was broken today).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug